<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    tools:context=".views.Login">

    <RelativeLayout
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@mipmap/ic_logo_lascapp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:orientation="vertical"
        android:paddingTop="40dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/text_email_hint"
            app:boxBackgroundColor="@android:color/transparent"
            app:hintTextColor="@color/text_base_color"
            android:textColorHint="@color/text_base_color"
            app:boxStrokeColor="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foregroundTint="@color/text_base_color"
                android:textColor="@color/text_base_color"
                android:textCursorDrawable="@drawable/my_cursor"
                tools:targetApi="lollipop" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField2"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/text_password_hint"
            app:boxBackgroundColor="@android:color/transparent"
            app:endIconMode="password_toggle"
            app:hintTextColor="@color/text_base_color"
            android:textColorHint="@color/text_base_color"
            app:endIconTint="@color/text_base_color">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/text_base_color"
                android:foregroundTint="@color/text_base_color"
                android:textCursorDrawable="@drawable/my_cursor"
                tools:targetApi="lollipop" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_new_user"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="140dp"
            android:layout_height="65dp"
            android:layout_marginStart="30dp"
            android:text="@string/text_button_register"
            android:textColor="@color/text_base_color"
            app:cornerRadius="8dp"
            app:strokeColor="@color/text_base_color"
            app:strokeWidth="2dp"
            android:layout_marginLeft="30dp"
            tools:ignore="PrivateResource" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_user_account"
            android:layout_width="140dp"
            android:layout_height="65dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="20dp"
            android:text="@string/text_button_sign_in"
            android:textColor="@android:color/holo_blue_light"
            app:backgroundTint="@color/text_base_color"
            app:cornerRadius="8dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="15dp" />
    </LinearLayout>
</LinearLayout>
